Fix dark mode colors

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,13 +19,13 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #7e9bd2;
+  --ifm-color-primary-dark: #6588c9;
+  --ifm-color-primary-darker: #597ec5;
+  --ifm-color-primary-darkest: #3d64ae;
+  --ifm-color-primary-light: #97aedb;
+  --ifm-color-primary-lighter: #a3b8df;
+  --ifm-color-primary-lightest: #c9d5ec;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
